# webassembly-on-server-examples

./: Cargo.toml  README.md
src/: main.rs
src/c2wasm/hello-world/: Makefile  hello-world.wasm  hello-world.wat  main.rs  makefile
src/c2wasm/import-export/: Makefile  export.c  export.rs  export.wasm  export.wat  import.c  import.rs  main.rs  makefile
