[package]
name = "wasmer_in_rust_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "2.0"
wasmer-wasi = "2.1.0"
rand = "0.8.3"

[[example]]
name = "c2wasm-hello"
path = "src/c2wasm/hello-world/main.rs"

[[example]]
name = "c2wasm-export"
path = "src/c2wasm/import-export/export.rs"
